# symbolic_regression.rs

./: .gitignore  .release-please-manifest.json  CONTRIBUTORS.md  Cargo.toml  README.md
.github/workflows/: benchmarks.yml  ci-symbolic-regression.yml  ci-web.yml  deploy-pages.yml  pages-deploy.yml  release-please.yml
dynamic_expressions/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
dynamic_expressions/benches/: eval.rs
dynamic_expressions/src/: compile.rs  evaluate.rs  evaluate_derivative.rs  lib.rs  math.rs  simplify.rs  strings.rs  subtree_caching.rs
dynamic_expressions/tests/: subtree_cache_proptests.rs  test_algebra_and_strings_coverage.rs  test_algebra_const_shift_and_meta.rs  test_branch_coverage.rs  test_builtin_op_panics.rs  test_builtin_ops_derivatives.rs  test_compile_plan_invariants.rs  test_const_generic_instantiations.rs  test_constants_traits_and_roots.rs  test_define_scalar_ops_coverage.rs  test_diff.rs  test_early_exit_instruction_paths.rs  test_error_paths.rs  test_eval.rs  test_expression_algebra.rs  test_finite_check_post_loop.rs  test_grad.rs  test_math_wrappers_coverage.rs  test_more_coverage.rs  test_nary.rs  test_operator_registry.rs  test_ops_coverage.rs  test_opset_macro_panics.rs  test_scalar_helpers_coverage.rs  test_strings.rs  test_strings_extra_coverage.rs  test_subtree_cache_edge_cases.rs  test_tree_utils.rs
symbolic_regression/: CHANGELOG.md  Cargo.toml  README.md
symbolic_regression/benches/: optim.rs
symbolic_regression/examples/: example.rs
web/wasm/: CHANGELOG.md  Cargo.toml  README.md
web/wasm/src/: lib.rs
(+91 files in other folders)
